apps/staging/home-blog-admin/deployment_overlay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-blog
spec:
  template:
    spec:
      containers:
        - name: home-blog
          image: ghcr.io/jonathanschwarzhaupt/home-blog:0.4.1-rc.10.71fafb9
