apps/staging/home-blog-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-blog-admin
spec:
  defaultBackend:
    service:
      name: home-blog
      port:
        number: 4000
  ingressClassName: tailscale
  tls:
    - hosts:
        - blog
